<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="8"
            android:id="@+id/title"
            android:text="Hello World!"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="2"
            android:id="@+id/extension"
            android:textColor="@color/purple_500"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/author"
            android:layout_weight="1"
            android:text="Hello World!"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:max="5"
            android:numStars="5"
            android:rating="2.5"
            android:isIndicator="true"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="#00ff00"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <TextView
        android:id="@+id/detail"
        android:scrollbars="vertical"
        android:layout_weight="9"
        android:text="Hello World!"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:textColor="#ff0000"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/show_original"
            android:text="@string/show_original"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/play"
            android:text="@string/play"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>